# brotli-dict-gen

./: Cargo.toml  README.md
src/brotli-dict-gen/: Cargo.toml
src/brotli-dict-gen-sys/: Cargo.toml  build.rs
src/brotli-dict-gen-sys/src/: dictionary_generator.c++  dictionary_generator.h
src/brotli-dict-gen/src/: lib.rs  main.rs
