[package]
name = "brotli-dict-gen-sys"
description = "Binding to Brotli dictionary_generator"
include = [
  "/src",
  "/build.rs",
  "/third_party/libdivsufsort",
  "/brotli/research/durchschlag.cc",
  "/brotli/research/durchschlag.h",
]
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]

[build-dependencies]
bindgen = "0.70"
cc = "1.0"
cmake = "0.1"
